--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     return resultTypes;
     };
     for(var i = 1; i < 13; i++) {
-      $.get("http://pokeapi.co/api/v2/item/" +i, function (data){
+      $.get("http://pokeapi.co/api/v2/pokemon/" +i, function (data){
         $("#item-" + (data.id)).html(data.name);
         $("#item-" + (data.id)).siblings(".hidden-info").html(profileContentStart + data.sprites.front_default + profileName + data.name + profileAbilities
         + Etypes(data) + profileAbilitiesEnd + profileCharsFirst + profileCharsSecond);
@@ -61,6 +61,7 @@
           width: 200px;
           height: 300px;
           margin: 0 20px 20px 0;
+          background-color: red;
           transition: box-shadow 0.3s;
         }
     .pokemon:hover{
@@ -146,6 +147,7 @@
           height: 450px;
           position: fixed;
           float: left;
+          background-color: green;
         }
     #character{
           display: none;
